# blackHoleSimulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: basic.vert  star.frag  star.vert
cmake/: Dependencies.cmake
docs/: ARCHITECTURE.md
src/: main.cpp
src/Assets/: AssetManager.cpp  AssetManager.h
src/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
src/Core/: Application.cpp  Application.h  Log.cpp  Log.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/Physics/: Constants.h  PhysicsWorld.cpp  PhysicsWorld.h
src/Rendering/: Mesh.cpp  Mesh.h  OpenGLContext.cpp  OpenGLContext.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/UI/: ImGuiLayer.cpp  ImGuiLayer.h
